--- a/Grundövningar/Pages/Calculator.razor
+++ b/Grundövningar/Pages/Calculator.razor
@@ -2,38 +2,60 @@
 
 <h1>Calculator</h1>
 
-<input @bind = "value1">
-<input @bind = "value2">
-<button @onclick ="Add">+</button>
-<div>result</div>
-
 
 @code {
-    int value1, value2;
-    string result = string.Empty;
+	/*string addition = string.Empty;
+		string subtraktion = string.Empty;
+		string multiplication = string.Empty;
+		string divition = string.Empty;
+		string circleRadius = string.Empty;
 
-    void Add()
-    {
-        result = $"{value1} + {value2} = {result}";
-    }
-        /*string addition = string.Empty,
-        subtration = string.Empty,
-        divition = string.Empty,
-        multiplication = string.Empty;
+		protected override void OnInitialized()
+			{
+			int value1 = 10, value2 = 20;
+			double result = value1 + value2;
+			double radius = 10;
 
-    protected override void OnInitialized()
-    {
-        int value1 = 10, value2 = 20;
-        double result = value1 + value2;
-        addition = $"{value1} + {value2} = {result}";
+			addition = $"{value1} + {value2} = {result}";
 
-        result = value1 - value2;
-        subtration = $"{value1} - {value2} = {result}";
+			result = value1 - value2;
+			subtraktion = $"{value1} - {value2} = {result}";
 
-        result = Convert.ToDouble(value1) / value2;
-        divition = $"{value1} / {value2} = {result}";
+			result = value1 * value2;
+			multiplication = $"{value1} * {value2} = {result}";
 
-        result = value1 * value2;
-        multiplication = $"{value1} * {value2} = {result}";*/
-    }
+			result = (double)value1 / value2;
+			divition = $"{value1} / {value2} = {result}";
+
+			result = 2 * radius * Math.Round(double.Pi, 4);
+			circleRadius = $"{2} * {radius} * {Math.Round(double.Pi, 4)} = {result}";
+
+		}*/
+	/*int value1 = 0, value2 = 0;
+	string addition = string.Empty;
+	string subtraktion = string.Empty;
+	string multiplication = string.Empty;
+	string divition = string.Empty;
+	void Add()
+	{
+		double result = value1 + value2;
+		addition = $"{value1} + {value2} = {result}";
+	}
+	void Subtract()
+	{
+		double result = value1 - value2;
+		subtraktion = $"{value1} - {value2} = {result}";
+	}
+	void Multiplicate()
+	{
+		double result = value1 * value2;
+		multiplication = $"{value1} * {value2} = {result}";
+	}
+	void Divide()
+	{
+		double result = (double)value1 / value2;
+		divition = $"{value1} / {value2} = {Math.Round(result, 3)}";
+	}*/
+
 }
+-
