--- a/Grundövningar/Pages/Store.razor
+++ b/Grundövningar/Pages/Store.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using Grundövningar.Classes;
+@inject PetStore store
 <h1></h1>
 <table class="table table-striped">
     <thead>
@@ -9,4 +11,28 @@
             <th scope="col">Actions</th>
         </tr>
     </thead>
+    <tbody>
+        @foreach (var pet in store.Pets)
+        {
+        <tr>
+            <td>@pet.Name</td>
+            <td>@pet.Feed</td>
+            <td>@pet.Animal</td>
+            <td><button class="btn btn-primary" @onclick="@(() => store.Feed(pet.Id))">Eat</button></td>
+        </tr>
+        }
+    </tbody>
 </table>
+@if (store.Message != string.Empty)
+{
+    <div class="alert alert-warning fade show" role="alert">
+        <strong>Feeding time!</strong> @store.Message
+    </div>
+}
+@code 
+{
+    protected override async Task OnInitializedAsync()
+    {
+        await store.LoadPets();
+    }
+}
